Ensure text remains visible during webfont load https://web.dev/font-display/?utm_source=lighthouse&utm_medium=devtools

--- a/public/stylesheets/layout/_fonts.scss
+++ b/public/stylesheets/layout/_fonts.scss
@@ -14,6 +14,7 @@ Material design icons are the official [icon set](http://www.google.com/design/s
        url('/fonts/MaterialIcons-Regular.woff2') format('woff2'),
        url('/fonts/MaterialIcons-Regular.woff') format('woff'),
        url('/fonts/MaterialIcons-Regular.ttf') format('truetype');
+  font-display: swap;
 }
 .material-icons {
   font-family: 'Material Icons';
